fixed spacing in about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,11 @@ body {
 #about p {
     font-size: 22px;
     line-height: 1.8;
-    margin: 15px 0; 
+    margin: 30px 0 15px 0; 
 }
 .parallax-container {
     height: 200px;
-    margin: 20px 0;
+    margin: 20px 0 70px 0;
 }
 
 
